# SlopSSH

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PROGRESS.md  README.md  REPORT.md  SKILLS.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/muon-core/: Cargo.toml
crates/muon-core/src/: lib.rs  tab_state.rs  utils.rs
crates/muon-core/src/config/: editor.rs  mod.rs  paths.rs  settings.rs
crates/muon-core/src/credentials/: mod.rs  store.rs
crates/muon-core/src/file_transfer/: benchmark.rs  engine.rs  mod.rs  progress.rs
crates/muon-core/src/filesystem/: mod.rs
crates/muon-core/src/local_terminal/: mod.rs  pty.rs
crates/muon-core/src/logging/: mod.rs
crates/muon-core/src/plugin/: api.rs  host.rs  loader.rs  mod.rs
crates/muon-core/src/scripts/: mod.rs
crates/muon-core/src/session/: folder.rs  import.rs  info.rs  mod.rs  pool.rs  store.rs
crates/muon-core/src/snippets/: mod.rs
crates/muon-core/src/ssh/: auth.rs  channel.rs  connection.rs  host_keys.rs  jump_host.rs  key_manager.rs  mod.rs  port_forward.rs  proxy.rs  session_manager.rs  x11.rs
crates/muon-core/src/tools/: mod.rs  remote_exec.rs
crates/muon-core/src/updater/: github.rs  mod.rs
crates/muon-plugins/: README.md
crates/muon-plugins/hello/: Cargo.toml
crates/muon-plugins/hello/src/: lib.rs
crates/muon-plugins/k8s-context/: Cargo.toml
crates/muon-plugins/k8s-context/src/: lib.rs
crates/muon-tauri/: Cargo.toml  muon-ssh.desktop  tauri.conf.json
crates/muon-tauri/src/: main.rs  menu.rs  state.rs
crates/muon-tauri/src/commands/: import_cmds.rs  key_cmds.rs  local_terminal_cmds.rs  mod.rs  plugin_cmds.rs  port_forward_cmds.rs  session_cmds.rs  settings_cmds.rs  sftp_cmds.rs  snippet_cmds.rs  ssh_cmds.rs  system_cmds.rs  tab_state_cmds.rs  tools_cmds.rs  transfer_cmds.rs
crates/slopssh-core/: Cargo.toml
crates/slopssh-core/src/: lib.rs  utils.rs
crates/slopssh-core/src/config/: mod.rs  paths.rs
crates/slopssh-core/src/credentials/: mod.rs  store.rs
crates/slopssh-core/src/file_transfer/: benchmark.rs  engine.rs
crates/slopssh-core/src/filesystem/: local.rs  mod.rs  remote.rs  types.rs
crates/slopssh-core/src/local_terminal/: mod.rs
crates/slopssh-core/src/logging/: mod.rs
crates/slopssh-core/src/plugin/: host.rs  mod.rs
crates/slopssh-core/src/session/: folder.rs  store.rs
crates/slopssh-core/src/snippets/: mod.rs
crates/slopssh-core/src/ssh/: auth.rs  channel.rs  connection.rs  host_keys.rs  key_manager.rs  mod.rs  port_forward.rs  session_manager.rs  x11.rs
crates/slopssh-core/src/tools/: mod.rs  remote_exec.rs
crates/slopssh-core/src/updater/: github.rs
crates/slopssh-plugins/: README.md
crates/slopssh-plugins/hello/: Cargo.toml
crates/slopssh-plugins/hello/src/: lib.rs
crates/slopssh-plugins/k8s-context/: Cargo.toml
crates/slopssh-plugins/k8s-context/src/: lib.rs
crates/slopssh-tauri/: Cargo.toml  slopssh.desktop  tauri.conf.json
crates/slopssh-tauri/capabilities/: default.json
crates/slopssh-tauri/icons/: icon.icns
crates/slopssh-tauri/src/: main.rs  menu.rs  state.rs
crates/slopssh-tauri/src/commands/: import_cmds.rs  key_cmds.rs  local_terminal_cmds.rs  mod.rs  plugin_cmds.rs  port_forward_cmds.rs  session_cmds.rs  settings_cmds.rs  sftp_cmds.rs  snippet_cmds.rs  ssh_cmds.rs  system_cmds.rs  tab_state_cmds.rs  tools_cmds.rs  transfer_cmds.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/common/: ContextMenu.svelte  Dialog.svelte
frontend/src/components/files/: FileBrowser.svelte  FileEditor.svelte  FileList.svelte  TransferQueue.svelte
frontend/src/components/layout/: AppShell.svelte  Sidebar.svelte
frontend/src/components/session/: ImportDialog.svelte  NewSessionDialog.svelte  PasswordDialog.svelte
frontend/src/i18n/: cn.json  de.json  en.json  es.json  fr.json  pt.json  ru.json
frontend/src/lib/: types.ts
frontend/tests/e2e/: app.spec.ts
frontend/tests/unit/: i18n.test.ts  shortcuts.test.ts  themes.test.ts  types.test.ts  utils.test.ts
scripts/: build-plugins.sh  linux-sysinfo.sh  ps.sh  search.sh
(+22 files in other folders)
