[package]
name = "muon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Muon SSH — SSH engine, session management, and configuration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
russh = "0.60"
russh-sftp = "2"
async-trait = "0.1"
keyring = "3.6.3"
portable-pty = "0.9"
