[package]
name = "slopssh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for SlopSSH — SSH engine, session management, and configuration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
russh = "0.60"
russh-sftp = { workspace = true }
async-trait = "0.1"
keyring = "3.6.3"
portable-pty = "0.9"
reqwest = { version = "0.13", features = ["json"], default-features = false }
wasmtime = "30"
sha2 = "0.11"
aes-gcm = "0.10.3"
tracing-appender = "0.2.5"
