[package]
name = "slopssh-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SlopSSH Tauri application"

[dependencies]
slopssh-core = { path = "../slopssh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
russh-sftp = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
